@@ -1,7 +1,7 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.blizzard.com/wow/ui/
 ..\FrameXML\UI.xsd">
 
-    <Frame name="GwMicroButtonFrameTmpl" topLevel="true" frameStrata="HIGH" inherits="SecureHandlerEnterLeaveTemplate" virtual="true">
+    <Frame name="GwMicroButtonFrameTmpl" topLevel="true" frameStrata="LOW" inherits="SecureHandlerEnterLeaveTemplate" virtual="true">
         <Size x="380" y="41"/>
         <Frames>
             <Frame parentKey="cf" inherits="SecureFrameTemplate">
